media query fixed for all devices

--- a/index.html
+++ b/index.html
@@ -55,6 +55,46 @@
               </a>
             </div>
           </div>
+          <div class="project-card">
+            <div>
+              <img
+                class="project-card__logo"
+                src="./img/tindog.svg"
+                alt="Tindog"
+              />
+            </div>
+            <h3>Tindog</h3>
+            <p>Tinder for Dogs</p>
+            <div>
+              <a href="https://rudraux.github.io/TinDog-web/">
+                <img
+                  class="project-card__link"
+                  src="./img/Link.svg"
+                  alt="Link"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="project-card">
+            <div>
+              <img
+                class="project-card__logo"
+                src="./img/tindog.svg"
+                alt="Tindog"
+              />
+            </div>
+            <h3>Tindog</h3>
+            <p>Tinder for Dogs</p>
+            <div>
+              <a href="https://rudraux.github.io/TinDog-web/">
+                <img
+                  class="project-card__link"
+                  src="./img/Link.svg"
+                  alt="Link"
+                />
+              </a>
+            </div>
+          </div>
         </div>
       </section>
       <section class="like">
