social link and link fixed

--- a/index.html
+++ b/index.html
@@ -19,18 +19,26 @@
         <h1>Pollab D.</h1>
       </section>
       <section class="social">
-        <a href="https://twitter.com/rudraux"
-          ><img src="./img/Twitter.svg" alt="Twitter"
-        /></a>
-        <a href="https://github.com/RudraUX"
-          ><img src="./img/GitHub.svg" alt="Github"
-        /></a>
-        <a href="https://www.linkedin.com/in/rudraux/"
-          ><img src="./img/LinkedIn.svg" alt="Linkedin"
-        /></a>
-        <a href="https://www.behance.net/rudraux"
-          ><img src="./img/Behance.svg" alt="Behance"
-        /></a>
+        <div class="social-handle">
+          <a href="https://twitter.com/rudraux"
+            ><img src="./img/Twitter.svg" alt="Twitter"
+          /></a>
+        </div>
+        <div class="social-handle">
+          <a href="https://github.com/RudraUX"
+            ><img src="./img/GitHub.svg" alt="Github"
+          /></a>
+        </div>
+        <div class="social-handle">
+          <a href="https://www.linkedin.com/in/rudraux/"
+            ><img src="./img/LinkedIn.svg" alt="Linkedin"
+          /></a>
+        </div>
+        <div class="social-handle">
+          <a href="https://www.behance.net/rudraux"
+            ><img src="./img/Behance.svg" alt="Behance"
+          /></a>
+        </div>
       </section>
       <section class="project">
         <h2>Projects</h2>
@@ -45,13 +53,9 @@
             </div>
             <h3>Tindog</h3>
             <p>Tinder for Dogs</p>
-            <div>
+            <div class="project-card__link">
               <a href="https://rudraux.github.io/TinDog-web/">
-                <img
-                  class="project-card__link"
-                  src="./img/Link.svg"
-                  alt="Link"
-                />
+                <img src="./img/Link.svg" alt="Link" />
               </a>
             </div>
           </div>
