development  Django removed

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             <div><img src="./img/postgresql.svg" alt="PostgreSQL" /></div>
             <h4>PostgreSQL</h4>
           </div>
-          <div class="like-container__card">
+          <!-- <div class="like-container__card">
             <div><img src="./img/django.svg" alt="Django" /></div>
             <h4>Django</h4>
-          </div>
+          </div> -->
           <div class="like-container__card">
             <div><img src="./img/figma.svg" alt="Figma" /></div>
             <h4>Figma</h4>
