--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <div><img src="./img/react.svg" alt="React js" /></div>
             <h4>React</h4>
           </div>
-          <div class="like-container__card">
+          <!-- <div class="like-container__card">
             <div><img src="./img/analytics.svg" alt="Data Science" /></div>
             <h4>Machine Learning</h4>
-          </div>
+          </div> -->
           <div class="like-container__card">
             <div><img src="./img/python.svg" alt="Python" /></div>
             <h4>Python</h4>
@@ -90,10 +90,10 @@
             <div><img src="./img/css3.svg" alt="css" /></div>
             <h4>CSS</h4>
           </div>
-          <div class="like-container__card">
+          <!-- <div class="like-container__card">
             <div><img src="./img/postgresql.svg" alt="PostgreSQL" /></div>
             <h4>PostgreSQL</h4>
-          </div>
+          </div> -->
           <!-- <div class="like-container__card">
             <div><img src="./img/django.svg" alt="Django" /></div>
             <h4>Django</h4>
