socials size fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="social">
         <div class="social-handle">
           <a href="https://twitter.com/rudraux"
-            ><img src="./img/Twitter.svg" alt="Twitter"
+            ><img class="social-twitter" src="./img/Twitter.svg" alt="Twitter"
           /></a>
         </div>
         <div class="social-handle">
