github link added to the card

--- a/index.html
+++ b/index.html
@@ -44,19 +44,28 @@
         <h2>Projects</h2>
         <div class="project-container">
           <div class="project-card">
-            <div>
-              <img
-                class="project-card__logo"
-                src="./img/tindog.svg"
-                alt="Tindog"
-              />
+            <div class="project-card_icons">
+              <div>
+                <img
+                  class="project-card__logo"
+                  src="./img/tindog.svg"
+                  alt="Tindog"
+                />
+              </div>
+              <div class="project-card__git">
+                <a href="https://github.com/RudraUX/TinDog-web">
+                  <img src="./img/github3.svg" alt="github" />
+                </a>
+              </div>
             </div>
             <h3>Tindog</h3>
             <p>Tinder for Dogs</p>
             <div class="project-card__link">
-              <a href="https://rudraux.github.io/TinDog-web/">
-                <img src="./img/Link.svg" alt="Link" />
-              </a>
+              <div class="project-card__link-img">
+                <a href="https://rudraux.github.io/TinDog-web/">
+                  <img src="./img/Link.svg" alt="Link" />
+                </a>
+              </div>
             </div>
           </div>
         </div>
