--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </header>
       <section class="hero">
         <img src="./img/hero.svg" alt="hero" />
-        <p>Eat Sleep Code Repeat</p>
+        <p>Design x Code</p>
         <h1>Pollab D.</h1>
       </section>
       <section class="social">
