--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <title>Pollab D.</title>
@@ -11,7 +14,9 @@
   <body>
     <div id="container">
       <header>
-        <a href="/index.html"><img src="./img/logo.svg" alt="Logo" /></a>
+        <a href="/index.html">
+          <img src="./img/logo.svg" alt="Logo" />
+        </a>
       </header>
       <section class="hero">
         <img src="./img/hero.svg" alt="hero" />
@@ -20,9 +25,13 @@
       </section>
       <section class="social">
         <div class="social-handle">
-          <a href="https://twitter.com/rudraux"
-            ><img class="social-twitter" src="./img/Twitter.svg" alt="Twitter"
-          /></a>
+          <a href="https://twitter.com/rudraux">
+            <img
+              class="social-twitter"
+              src="./img/Twitter.svg"
+              alt="Twitter"
+            />
+          </a>
         </div>
         <div class="social-handle">
           <a href="https://github.com/RudraUX"
@@ -48,21 +57,23 @@
               <div>
                 <img
                   class="project-card__logo"
-                  src="./img/tindog.svg"
-                  alt="Tindog"
+                  src="./img/manage.svg"
+                  alt="Manage"
                 />
               </div>
               <div class="project-card__git">
-                <a href="https://github.com/RudraUX/TinDog-web">
+                <a
+                  href="https://github.com/RudraUX/tailwind-manage-landing-page/tree/master"
+                >
                   <img src="./img/github3.svg" alt="github" />
                 </a>
               </div>
             </div>
-            <h3>Tindog</h3>
-            <p>Tinder for Dogs</p>
+            <h3>#Manage</h3>
+            <p>Design using Tailwind</p>
             <div class="project-card__link">
               <div class="project-card__link-img">
-                <a href="https://rudraux.github.io/TinDog-web/">
+                <a href="https://manage-tailwind-q.netlify.app/">
                   <img src="./img/Link.svg" alt="Link" />
                 </a>
               </div>
@@ -76,7 +87,9 @@
         <h3>Development</h3>
         <div class="like-container-1">
           <div class="like-container__card">
-            <div><img src="./img/react.svg" alt="React js" /></div>
+            <div>
+              <img src="./img/react.svg" alt="React js" />
+            </div>
             <h4>React</h4>
           </div>
           <!-- <div class="like-container__card">
@@ -84,19 +97,27 @@
             <h4>Machine Learning</h4>
           </div> -->
           <div class="like-container__card">
-            <div><img src="./img/python.svg" alt="Python" /></div>
+            <div>
+              <img src="./img/python.svg" alt="Python" />
+            </div>
             <h4>Python</h4>
           </div>
           <div class="like-container__card">
-            <div><img src="./img/graphql.svg" alt="Graphql" /></div>
+            <div>
+              <img src="./img/graphql.svg" alt="Graphql" />
+            </div>
             <h4>Graphql</h4>
           </div>
           <div class="like-container__card">
-            <div><img src="./img/github2.svg" alt="Github" /></div>
+            <div>
+              <img src="./img/github2.svg" alt="Github" />
+            </div>
             <h4>Github</h4>
           </div>
           <div class="like-container__card">
-            <div><img src="./img/css3.svg" alt="css" /></div>
+            <div>
+              <img src="./img/css3.svg" alt="css" />
+            </div>
             <h4>CSS</h4>
           </div>
           <!-- <div class="like-container__card">
@@ -108,11 +129,15 @@
             <h4>Django</h4>
           </div> -->
           <div class="like-container__card">
-            <div><img src="./img/figma.svg" alt="Figma" /></div>
+            <div>
+              <img src="./img/figma.svg" alt="Figma" />
+            </div>
             <h4>Figma</h4>
           </div>
           <div class="like-container__card">
-            <div><img src="./img/photoshop.svg" alt="Photoshop" /></div>
+            <div>
+              <img src="./img/photoshop.svg" alt="Photoshop" />
+            </div>
             <h4>Photoshop</h4>
           </div>
         </div>
@@ -120,7 +145,9 @@
 
       <section class="footer">
         <div>
-          <a href="/index.html"><img src="./img/logo.svg" alt="Logo" /></a>
+          <a href="/index.html"
+            ><img src="./img/logo.svg" alt="Logo"
+          /></a>
         </div>
         <h4>Pollab Das.</h4>
       </section>
