--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </div>
             </div>
             <h3>#Manage</h3>
-            <p>Design using Tailwind</p>
+            <p>Designed using Tailwind</p>
             <div class="project-card__link">
               <div class="project-card__link-img">
                 <a href="https://manage-tailwind-q.netlify.app/">
